syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.myProto";
option java_outer_classname = "myProto";
option objc_class_prefix = "RTG";

package myProto;

service MessageService {
    rpc connect(Empty) returns (User);//
    rpc disconnect(User) returns (Empty);//
    rpc sendMessage(Message) returns (Empty); //
    rpc sendPlay(Play) returns (Empty);//
    rpc updateSessionStatus(User) returns (stream SessionStatus); //
    rpc updateMessages(User) returns (stream Message); //
    rpc updateBoard(User) returns (stream Board); //
    rpc updateTurn(User) returns (stream User); //
    rpc updateGameStatus(User) returns (stream GameStatus);
}

message Empty {}

message User {
    string id = 1;
    string name = 2;
    bool isYourTurn = 3;
}

message Message {
    User user = 1;
    string text = 2;
}

message SessionStatus {
    bool gameStarted = 1;
}

message Play {
    int32 row = 1;
    int32 column = 2;
    PlayDirection direction = 3;
    User user = 4;
}

message Board {
    repeated BoardColumn rows = 1;
}

message BoardColumn {
    repeated BoardValue columns = 1;
}

message GameStatus {
    bool gameEnd = 1;
    bool win = 2;
}


enum PlayDirection{
    right = 0;
    left = 1;
    top = 2;
    bottom = 3;
}

enum BoardValue {
    on = 0;
    off = 1;
    null = 2;
}


